Revert "fix for issue Icon/Image Box widgets icon/image position not working on mobile"
This reverts commit 9cd78dd0f30f6f9a723fd2132f786885259c8412.

--- a/assets/dev/scss/frontend/widgets/icon-box.scss
+++ b/assets/dev/scss/frontend/widgets/icon-box.scss
@@ -70,59 +70,12 @@
 	}
 
 	@media (max-width: $screen-sm-max) {
-		&.elementor-position- {
-			&left,
-			&right {
 
-				.elementor-icon-box-wrapper {
-					display: flex;
-				}
-
-				.elementor-icon-box-icon {
-					display: inline-flex;
-					flex: 0 0 auto; // Hack for Safari
-				}
-			}
-
-			&right {
-
-				.elementor-icon-box-wrapper {
-					text-align: $end;
-					flex-direction: getValueByDirection(row-reverse, row);
-				}
-			}
-
-			&left {
-
-				.elementor-icon-box-wrapper {
-					text-align: $start;
-					flex-direction: getValueByDirection(row, row-reverse);
-				}
-			}
-		}
-
-		&.elementor-vertical-align- {
-
-			&top {
-
-				.elementor-icon-box-wrapper {
-					align-items: flex-start;
-				}
-			}
-
-			&middle {
-
-				.elementor-icon-box-wrapper {
-					align-items: center;
-				}
-			}
-
-			&bottom {
-
-				.elementor-icon-box-wrapper {
-					align-items: flex-end;
-				}
-			}
+		// TEMP code to override the icon spacing
+		.elementor-icon-box-icon {
+			margin-left: auto !important;
+			margin-right: auto !important;
+			margin-bottom: 15px;
 		}
 	}
 
